--- a/Templates/core/product_details.html
+++ b/Templates/core/product_details.html
@@ -52,7 +52,7 @@
                         <input type="hidden" class="product-title-{{ p.id }}" value="{{ p.title }}">
                         <button type="submit" class="primary-btn add add-to-cart-btn" data-index="{{ p.id }}" id="add-to-cart-btn"> ADD TO CART</button>
                         {% comment %} <button type ="submit" class="primary-btn" id="add-to-cart-btn">ADD TO CART</button> {% endcomment %}
-                        <button class="add-to-wishlist" data-product-item="{{p.id}}" ><i class="fa fa-heart"></i></button>
+                        <button class="add-to-wishlist" data-product-item="{{p.id}}" ><span class="icon_heart_alt"></span></button>
                         <ul>
                             <li><b>Availability</b> <span>In Stock</span></li>
                             <li><b>Shipping</b> <span>01 day shipping. <samp>(Free Delivery)</samp></span></li>
